# pr-project

./: .gitignore  CMakeLists.txt  Kontrolowanie auta.ino  PR_project.qmlproject  README.md  app_icon.rc  gpio.txt  qds.cmake  serversExample.py  start-hotspot.sh
App/: .gitignore  CMakeLists.txt  README.md  qds.cmake
App/App/: main.cpp
App/Dependencies/Components/src/imports/utils/: CMakeLists.txt
App/PR_project/: CMakeLists.txt
App/PR_project/designer/: plugin.metainfo
App/PR_projectContent/: App.qml  CMakeLists.txt  CameraControl.qml  CameraView.qml  ConnectPanel.qml  Messages.qml  Screen01.qml  TopBar.ui.qml  VehicleControl.qml
App/autogen/: environment.h
App/backend/: CMakeLists.txt
App/examples/: serversExample.py
PR_project/: CMakeLists.txt  Constants.qml  qmldir
PR_projectContent/: App.qml  CMakeLists.txt  CameraControl.qml  CameraView.ui.qml  Messages.qml  Screen01.qml  Screen01.ui.qml  VehicleControl.qml  VehicleControlConfig.qml  VehicleControlConfig.ui.qml
backend/: TcpClient.cpp  TcpClient.h
